# injection

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: qa.yml
injection/: compat.py  main.py  pep567.py  pep690.py
injection/contrib/: pep567.py  pep690.py
tests/unit_tests/: test_compat.py  test_main.py
